...
        NotificationCenter.default.removeObserver(self, name: NSNotification.Name.movieSubscribedSelected, object: nil)
        NotificationCenter.default.removeObserver(self, name: NSNotification.Name.reloadMoviesSubscribed, object: nil)
    }
    
    private func setSearchTextField() {
        //TODO: localized text
        searchTextField = GenericSearchTextField(delegate: self, placeholderText: "Search Movie")
        guard let searchTextField else { return }
        self.view.addSubview(searchTextField)
        searchTextField.translatesAutoresizingMaskIntoConstraints = false
        setSearchTextFieldLayout()
    }
    
...
